--- a/src/Sample.Inventory/appsettings.json
+++ b/src/Sample.Inventory/appsettings.json
@@ -6,6 +6,9 @@
   "ServiceSettings": {
     "ServiceName": "Inventory"
   },
+  "RabbitMQSettings":{
+    "Host":"localhost"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
