--- a/src/Sample.Inventory/Sample.Inventory.csproj
+++ b/src/Sample.Inventory/Sample.Inventory.csproj
@@ -6,7 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
-    <PackageReference Include="sample.common" Version="1.1.7" />
+    <PackageReference Include="Sample.Catalog.Contract" Version="1.0.0" />
+    <PackageReference Include="sample.common" Version="1.1.9" />
     <PackageReference Include="system.net.http.json" Version="5.0.0" />
   </ItemGroup>
 
